--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
   <title>Heatmap POC</title>
 </head>
 <body>
-<div id="map"></div>
+<div id="map">
+  <script>
+    document.addEventListener("DOMContentLoaded", initMap);
+  </script>
+</div>
 </body>
 </html>
