--- a/index.html
+++ b/index.html
@@ -37,11 +37,7 @@
 
   <title>Heatmap POC</title>
 </head>
-<body>
-<div id="map">
-  <script>
-    document.addEventListener("DOMContentLoaded", initMap);
-  </script>
-</div>
+<body onload="initMap()">
+
 </body>
 </html>
