--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <title>Heatmap POC</title>
 </head>
-<body onload="initMap()">
-
+<body>
+<div id="map" style="height: 500px;"></div>
 </body>
 </html>
