--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         var map;
         var heatmap;
         var heatmapData = [
-            {location: new google.maps.LatLng(37.335449, -121.998482), weight: 10},
-
+            {location: new google.maps.LatLng(37.335449, -121.998482), weight: 10}
         ];
 
         function initMap() {
