--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         var map;
         var heatmap;
         var heatmapData = [
-            {location: new google.maps.LatLng(37.335449, -121.998482), weight: 10}
+            {location: new google.maps.LatLng(34.0522, -118.2437), weight: 10},
+            {location: new google.maps.LatLng(34.0622, -118.2537), weight: 20},
+            {location: new google.maps.LatLng(34.0722, -118.2637), weight: 30}
         ];
 
         function initMap() {
