--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scout Form</title>
+    <title>Zapier Interface Page</title>
+    <style>
+        /* Set the zapier-interfaces-page-embed element to be responsive */
+        zapier-interfaces-page-embed {
+            width: 100%;
+            height: 70vh; /* You can adjust this value to your preference */
+        }
+    </style>
 </head>
 <body>
     <!-- Embedded Zapier Interface -->
     <script type='module' src='https://interfaces.zapier.com/assets/web-components/zapier-interfaces/zapier-interfaces.esm.js'></script>
-    <zapier-interfaces-page-embed page-id='clk9vb51b143350pjqjyit7hc1' no-background='false' style='max-width: 900px; height: 500px;'></zapier-interfaces-page-embed>
+    <zapier-interfaces-page-embed page-id='clk9vb51b143350pjqjyit7hc1' no-background='false'></zapier-interfaces-page-embed>
 </body>
 </html>
