--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zapier Interface Page</title>
+    <title>Scout Issue Report Form</title>
     <style>
         /* Set the zapier-interfaces-page-embed element to be responsive */
         zapier-interfaces-page-embed {
