--- a/confirmation.html
+++ b/confirmation.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
 <html>
-Thanks your issue report has been submitted.
+<head>
+    <title>Confirmation</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" rel="stylesheet">
+</head>
+<body class="p-6 bg-gray-100 text-gray-900">
+    <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+        <p class="text-gray-700 text-2xl font-bold">Thank you!</p>
+        <p class="text-gray-700 text-lg">Your issue report has been submitted.</p>
+    </div>
+</body>
 </html>
