--- a/index.html
+++ b/index.html
@@ -3,59 +3,30 @@
 <head>
     <title>Scout Issue Report Form</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" rel="stylesheet">
-    <script>
-    function formSubmit(event) {
-        event.preventDefault();
-
-        // get form values
-        let name = document.getElementById('name').value;
-        let title = document.getElementById('title').value;
-        let description = document.getElementById('description').value;
-        let severity = document.getElementById('severity').value;
-        let device = document.getElementById('device').value;
-
-        // create a JSON object
-        let data = {
-            'name': name,
-            'title': title,
-            'description': description,
-            'severity': severity,
-            'device': device
-        };
-
-        // send a POST request
-        fetch('https://hooks.zapier.com/hooks/catch/15275232/31pxk4g/', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json',
-            },
-            body: JSON.stringify(data),
-        })
-        .then((response) => response.json())
-        .then((data) => {
-            console.log('Success:', data);
+    <script type="text/javascript">
+        function formSubmit() {
             window.location = 'confirmation.html';
-        })
-        .catch((error) => {
-            console.error('Error:', error);
-        });
-    }
+            return false;
+        }
     </script>
 </head>
 <body class="p-6 bg-gray-100 text-gray-900">
-    <form onsubmit="formSubmit(event);" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+    <form action="https://hooks.zapier.com/hooks/catch/15892648/31pj07c/" method="post" onsubmit="return formSubmit();" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
         <div class="mb-4">
             <label class="block text-gray-700 text-sm font-bold mb-2" for="name">Name:</label>
             <input type="text" id="name" name="name" required class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
         </div>
+        
         <div class="mb-4">
             <label class="block text-gray-700 text-sm font-bold mb-2" for="title">Title/Summary:</label>
             <input type="text" id="title" name="title" required class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
         </div>
+
         <div class="mb-4">
             <label class="block text-gray-700 text-sm font-bold mb-2" for="description">Description:</label>
             <textarea id="description" name="description" required class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"></textarea>
         </div>
+
         <div class="mb-4">
             <label class="block text-gray-700 text-sm font-bold mb-2" for="severity">Severity:</label>
             <select id="severity" name="severity" required class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
@@ -65,6 +36,7 @@
                 <option value="High">High</option>
             </select>
         </div>
+
         <div class="mb-4">
             <label class="block text-gray-700 text-sm font-bold mb-2" for="device">Device Type:</label>
             <select id="device" name="device" required class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
@@ -74,6 +46,7 @@
                 <option value="Web">Web</option>
             </select>
         </div>
+
         <div class="flex items-center justify-between">
             <input type="submit" value="Submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
         </div>
