--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+        <script type="text/javascript">
+        function formSubmit() {
+            window.location = 'confirmation.html';
+            return false;
+        }
+    </script>
     <title>Scout Issue Report Form</title>
 </head>
 <body>
