--- a/confirmation.html
+++ b/confirmation.html
@@ -8,6 +8,7 @@
     <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
         <p class="text-gray-700 text-2xl font-bold">Thank you!</p>
         <p class="text-gray-700 text-lg">Your issue report has been submitted.</p>
+        <a href="index.html" class="text-indigo-500 hover:text-indigo-600">Submit another issue</a>
     </div>
 </body>
 </html>
