--- a/confirmation.html
+++ b/confirmation.html
@@ -4,10 +4,10 @@
     <title>Confirmation</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="p-6 bg-gray-100 text-gray-900">
-    <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
-        <p class="text-gray-700 text-2xl font-bold">Thank you!</p>
-        <p class="text-gray-700 text-lg">Your issue report has been submitted.</p>
+<body class="bg-gray-100 py-8">
+    <div class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden md:max-w-2xl m-4 p-6">
+        <p class="text-gray-700 text-2xl font-bold mb-2">Thank you!</p>
+        <p class="text-gray-700 text-lg mb-4">Your issue report has been submitted.</p>
         <a href="index.html" class="text-indigo-500 hover:text-indigo-600">Submit another issue</a>
     </div>
 </body>
