--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
         <form id="reportForm" class="space-y-4">
             <div>
                 <label for="name" class="block text-sm font-medium text-gray-700">Name:</label>
-                <input type="text" id="name" name="name" required class="mt-1 block w-full rounded-md bg-gray-100 border-transparent focus:border-gray-500 focus:bg-white focus:ring-0">
+                <input type="text" id="name" name="name" required class="mt-1 block w-full px-2 py-3 rounded-md bg-gray-100 border-transparent focus:border-gray-500 focus:bg-white focus:ring-0">
             </div>
 
             <div>
                 <label for="title" class="block text-sm font-medium text-gray-700">Title/Summary:</label>
-                <input type="text" id="title" name="title" required class="mt-1 block w-full rounded-md bg-gray-100 border-transparent focus:border-gray-500 focus:bg-white focus:ring-0">
+                <input type="text" id="title" name="title" required class="mt-1 block w-full px-2 py-3 rounded-md bg-gray-100 border-transparent focus:border-gray-500 focus:bg-white focus:ring-0">
             </div>
 
             <div>
-                <label for="description" class="block text-sm font-medium text-gray-700">Description:</label>
-                <textarea id="description" name="description" required class="mt-1 block w-full rounded-md bg-gray-100 border-transparent focus:border-gray-500 focus:bg-white focus:ring-0"></textarea>
-            </div>
+    <label for="description" class="block text-sm font-medium text-gray-700">Description:</label>
+    <textarea id="description" name="description" rows="5" required class="mt-1 block w-full px-2 pt-2 pb-6 rounded-md bg-gray-100 border-transparent focus:border-gray-500 focus:bg-white focus:ring-0 leading-none"></textarea>
+</div>
+
+
 
             <div>
                 <label for="severity" class="block text-sm font-medium text-gray-700">Severity:</label>
