--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden md:max-w-2xl m-4 p-6">
         <form id="reportForm" class="space-y-4">
             <div>
-                <label for="name" class="block text-sm font-medium text-gray-700">Name:</label>
+                <label for="name" class="block text-sm font-medium text-gray-700">Your Name:</label>
                 <input type="text" id="name" name="name" required class="mt-1 block w-full px-2 py-3 rounded-md bg-gray-100 border-transparent focus:border-gray-500 focus:bg-white focus:ring-0">
             </div>
 
