--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
 
             <div>
                 <label for="title" class="block text-sm font-medium text-gray-700">Title/Summary:</label>
+                <small class="text-gray-500">A brief and descriptive title for the issue.</small>
                 <input type="text" id="title" name="title" required class="mt-1 block w-full px-2 py-3 rounded-md bg-gray-100 border-transparent focus:border-gray-500 focus:bg-white focus:ring-0">
+
             </div>
 
             <div>
     <label for="description" class="block text-sm font-medium text-gray-700">Description:</label>
+    <small class="text-gray-500">A detailed description of the bug, including steps to reproduce it if possible.</small>
     <textarea id="description" name="description" rows="5" required class="mt-1 block w-full px-2 pt-2 pb-6 rounded-md bg-gray-100 border-transparent focus:border-gray-500 focus:bg-white focus:ring-0 leading-none"></textarea>
 </div>
 
