--- a/index.html
+++ b/index.html
@@ -68,18 +68,20 @@
     const client = filestack.init('AfsQALJoRQhKdzEMnfL4bz');
 
     document.getElementById('fileUpload').addEventListener('click', function() {
-        client.picker({
-            maxFiles: 1,
-            maxSize: 5 * 1024 * 1024, // 5 MB
-        }).open().then(result => {
-            const fileURL = result.filesUploaded[0].url;
-            document.getElementById('fileURL').value = fileURL;
-            document.getElementById('fileInfo').innerText = 'File uploaded successfully.';
-        }).catch(error => {
-            document.getElementById('fileInfo').innerText = 'File upload failed.';
-            console.error(error);
-        });
+    client.picker({
+        maxFiles: 1,
+        maxSize: 5 * 1024 * 1024, // 5 MB
+    }).open().then(result => {
+        console.log('Filestack result:', result); // This line will log the result
+        const fileURL = result.filesUploaded[0].url;
+        document.getElementById('fileURL').value = fileURL;
+        document.getElementById('fileInfo').innerText = 'File uploaded successfully.';
+    }).catch(error => {
+        document.getElementById('fileInfo').innerText = 'File upload failed.';
+        console.error(error);
     });
+});
+
 
     // Form Submission Function
     function submitForm() {
