--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
          <p class="text-gray-600 mb-4">Please fill out the form below to report any issues or bugs you have encountered. Your feedback is valuable to us!</p> <!-- This is the added form description -->
         <form id="reportForm" class="space-y-4">
             <div>
-                <label for="name" class="block text-sm font-medium text-gray-700">Your Name:</label>
+                <label for="name" class="block text-sm font-medium text-gray-700">Your Name: <span class="text-red-600">*</span></label>
                 <input type="text" id="name" name="name" required class="mt-1 block w-full px-2 py-3 rounded-md bg-gray-100 border-transparent focus:border-gray-500 focus:bg-white focus:ring-0">
             </div>
 
             <div>
-                <label for="title" class="block text-sm font-medium text-gray-700">Title/Summary:</label>
+                <label for="title" class="block text-sm font-medium text-gray-700">Title/Summary: <span class="text-red-600">*</span></label>
                 <small class="text-gray-500">A brief and descriptive title for the issue.</small>
                 <input type="text" id="title" name="title" required class="mt-1 block w-full px-2 py-3 rounded-md bg-gray-100 border-transparent focus:border-gray-500 focus:bg-white focus:ring-0">
 
             </div>
 
             <div>
-                <label for="description" class="block text-sm font-medium text-gray-700">Description:</label>
+                <label for="description" class="block text-sm font-medium text-gray-700">Description: <span class="text-red-600">*</span></label>
                 <small class="text-gray-500">A detailed description of the bug, including steps to reproduce it if possible.</small>
                 <textarea id="description" name="description" rows="5" required class="mt-1 block w-full px-2 pt-2 pb-6 rounded-md bg-gray-100 border-transparent focus:border-gray-500 focus:bg-white focus:ring-0 leading-none"></textarea>
             </div>
