--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://static.filestackapi.com/filestack-js/3.x.x/filestack.min.js"></script>
+
+    
+
+    <!-- Paste this right before your closing </head> tag -->
+    <script type="text/javascript">
+    (function(f,b){if(!b.__SV){var e,g,i,h;window.mixpanel=b;b._i=[];b.init=function(e,f,c){function g(a,d){var b=d.split(".");2==b.length&&(a=a[b[0]],d=b[1]);a[d]=function(){a.push([d].concat(Array.prototype.slice.call(arguments,0)))}}var a=b;"undefined"!==typeof c?a=b[c]=[]:c="mixpanel";a.people=a.people||[];a.toString=function(a){var d="mixpanel";"mixpanel"!==c&&(d+="."+c);a||(d+=" (stub)");return d};a.people.toString=function(){return a.toString(1)+".people (stub)"};i="disable time_event track track_pageview track_links track_forms track_with_groups add_group set_group remove_group register register_once alias unregister identify name_tag set_config reset opt_in_tracking opt_out_tracking has_opted_in_tracking has_opted_out_tracking clear_opt_in_out_tracking start_batch_senders people.set people.set_once people.unset people.increment people.append people.union people.track_charge people.clear_charges people.delete_user people.remove".split(" ");
+    for(h=0;h<i.length;h++)g(a,i[h]);var j="set set_once union unset remove delete".split(" ");a.get_group=function(){function b(c){d[c]=function(){call2_args=arguments;call2=[c].concat(Array.prototype.slice.call(call2_args,0));a.push([e,call2])}}for(var d={},e=["get_group"].concat(Array.prototype.slice.call(arguments,0)),c=0;c<j.length;c++)b(j[c]);return d};b._i.push([e,f,c])};b.__SV=1.2;e=f.createElement("script");e.type="text/javascript";e.async=!0;e.src="undefined"!==typeof MIXPANEL_CUSTOM_LIB_URL?MIXPANEL_CUSTOM_LIB_URL:"file:"===f.location.protocol&&"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js".match(/^\/\//)?"https://cdn.mxpnl.com/libs/mixpanel-2-latest.min.js":"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";g=f.getElementsByTagName("script")[0];g.parentNode.insertBefore(e,g)}})(document,window.mixpanel||[]);
+    </script>
+
+    <script type="text/javascript">
+      mixpanel.init("47f004eef23cf3a633bab05d31f34a29", { debug: true, track_pageview: true, persistence: 'localStorage' });
+    </script>
+
+
 </head>
 <body class="bg-gray-100 py-8">
     <div class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden md:max-w-2xl m-4 p-6">
@@ -89,21 +103,43 @@
         $('#fileUpload').click(openPicker);
 
 
-        // Form Submission Function
         function submitForm() {
-            var formData = $('#reportForm').serialize();
-            $.ajax({
-                type: 'post',
-                url: 'https://hooks.zapier.com/hooks/catch/15892648/31pvirh/',
-                data: formData,
-                success: function() {
-                    window.location.href = 'confirmation.html'; // updated confirmation page url
-                },
-                error: function() {
-                    alert('There was an error submitting the form, please try again.');
-                }
+    var startTime = new Date(); // Record the start time
+
+    var formData = $('#reportForm').serialize();
+    $.ajax({
+        type: 'post',
+        url: 'https://hooks.zapier.com/hooks/catch/15892648/31pvirh/',
+        data: formData,
+        success: function() {
+            var endTime = new Date(); // Record the end time
+            var formCompletionDuration = (endTime - startTime) / 1000; // Calculate the time taken in seconds
+
+            var reporterName = $('#name').val();
+            var issueTitle = $('#title').val();
+            var description = $('#description').val();
+            var severity = $('#severity').val();
+            var deviceType = $('#device').val();
+            var fileUploaded = $('#fileURL').val();
+
+            // Track the event with Mixpanel
+            mixpanel.track("Issue Reported", {
+                reporter_name: reporterName,
+                issue_title: issueTitle,
+                description: description,
+                severity: severity,
+                device_type: deviceType,
+                file_uploaded: fileUploaded,
+                form_completion_duration: formCompletionDuration
             });
+
+            window.location.href = 'confirmation.html'; // updated confirmation page url
+        },
+        error: function() {
+            alert('There was an error submitting the form, please try again.');
         }
+    });
+}
     </script>
 
 </body>
