--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
             <div>
                 <label for="fileUpload" class="block text-sm font-medium text-gray-700">Upload File:</label>
-                <small class="text-gray-500">Attach a single image or video file to your report (max. 1 attachment). The file size must not exceed 5MB.</small>
+                <small class="text-gray-500">Attach one image or video (max. 5MB) to your report.</small>
                 <input type="button" id="fileUpload" value="Upload" class="mt-1 py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
                 <input type="hidden" id="fileURL" name="fileURL">
                 <p id="fileInfo" class="text-gray-500"></p> <!-- Display file info -->
