--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
             <div>
                 <label for="fileUpload" class="block text-sm font-medium text-gray-700">Upload File:</label>
                 <small class="text-gray-500">Attach one image or video (max. 5MB) to your report.</small>
-                <input type="button" id="fileUpload" value="Upload" class="mt-1 py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+                <div>
+                    <input type="button" id="fileUpload" value="Upload" class="block mt-1 py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+                </div>
                 <input type="hidden" id="fileURL" name="fileURL">
                 <p id="fileInfo" class="text-gray-500"></p> <!-- Display file info -->
             </div>
